// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model user {
  id       Int    @id @default(autoincrement())
  email    String @unique
  name     String
  password String
  role     String @default("USER")
  bookings booking[]
  createdAt  DateTime @default(now())
}

model movie {
  id          Int         @id @default(autoincrement())
  title       String
  year        Int
  director    String
  description String
  genre       String
  duration    Int
  screenings  screening[]
}

model room {
  id          Int         @id @default(autoincrement())
  name        String      @unique
  capacity    Int
  layout      String
  information String?
  screenings  screening[]
}

model screening {
  id       Int      @id @default(autoincrement())
  start DateTime
  movie    movie    @relation(fields: [movie_id], references: [id])
  price Decimal
  movie_id Int
  room     room     @relation(fields: [room_id], references: [id])
  room_id  Int
  bookings booking[]
  events  event[]
}

model booking {
  id         Int      @id @default(autoincrement())
  user       user     @relation(fields: [user_id], references: [id])
  user_id    Int
  screening  screening @relation(fields: [screening_id], references: [id])
  screening_id Int
  seats      String
  seats_count Int
  total      Decimal
  paid       Boolean @default(false)
  transaction_id String?
  payment_expires DateTime
  createdAt  DateTime @default(now())
}

model event {
  id          Int         @id @default(autoincrement())
  name        String
  description String
  createdAt   DateTime    @default(now())
  screenings  screening[]
}

model news {
  id          Int         @id @default(autoincrement())
  title       String
  subtitle    String
  content     String
  publication DateTime   @default(now())
  createdAt   DateTime    @default(now())
}